# Maurice

./: CMakeLists.txt  Maurice.pro  README.md
res/: icons.qrc  shaders.qrc
shaders/: lineHandle.fs  lineHandle.vs  shapeTextured.fs  shapeTextured.vs
src/: main.cpp
src/algorithm/: shape.cpp  shape.h
src/ui/: cagedialog.cpp  cagedialog.h  cagedialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwidget.cpp  openglwidget.h
src/utils/: gl_utils.cpp  gl_utils.h  shader_utils.cpp  shader_utils.h
